simplify auth service
