# cases/gen/http/openapi3.yaml
@@ -19,13 +19,14 @@ paths:
             schema:
               $ref: '#/components/schemas/AddRequestBody'
             example:
-              collected: 0.8091384557987812
-              currency: Autem qui aperiam aut.
-              desc: Expedita accusamus totam tempore.
+              collected: 0.8003833617014785
+              currency: Sunt libero ullam nam voluptatem quis.
+              desc: Qui officia non ipsa accusantium facilis consectetur.
               tags:
-              - Cupiditate qui quo veritatis est.
-              - Accusantium sed voluptas ut qui.
-              target: 0.5160925211499976
+              - Quisquam vel deserunt.
+              - Enim esse voluptas.
+              - Ut quia ratione ipsa repellat.
+              target: 0.34487022127545675
       responses:
         "200":
           description: ""
@@ -34,13 +35,28 @@ paths:
               schema:
                 $ref: '#/components/schemas/AddResponse'
               example:
-                desc: Non ipsa accusantium facilis consectetur aut dolores.
+                desc: Quia nemo expedita autem at in iste.
+        "401":
+          description: ""
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InvalidScopes'
+              example: Quis earum omnis enim.
   /api/cases/get:
     get:
       tags:
       - cases
       summary: get cases
       operationId: cases#get
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/GetRequestBody'
+            example:
+              token: Est esse id.
       responses:
         "200":
           description: ""
@@ -51,67 +67,71 @@ paths:
                 items:
                   $ref: '#/components/schemas/GetResponse'
                 example:
-                - Collected: 0.3869581768381672
-                  Currency: Ut enim nam deserunt sit omnis sapiente.
-                  DateModified: Exercitationem architecto vel veritatis cupiditate cupiditate suscipit.
-                  Description: Aut qui non iusto.
-                  ID: 4049203230264206593
+                - Collected: 0.08528366918654866
+                  Currency: Nam deserunt sit omnis sapiente numquam.
+                  DateModified: Architecto vel veritatis cupiditate cupiditate suscipit.
+                  Description: Qui non iusto dolor.
+                  ID: 3569059227681456877
                   Tags:
                   - Quo est occaecati ducimus omnis qui voluptates.
                   - Et aut.
                   - Accusantium qui.
-                  Target: 0.13596043899317112
-                - Collected: 0.3869581768381672
-                  Currency: Ut enim nam deserunt sit omnis sapiente.
-                  DateModified: Exercitationem architecto vel veritatis cupiditate cupiditate suscipit.
-                  Description: Aut qui non iusto.
-                  ID: 4049203230264206593
+                  Target: 0.3494768250899328
+                - Collected: 0.08528366918654866
+                  Currency: Nam deserunt sit omnis sapiente numquam.
+                  DateModified: Architecto vel veritatis cupiditate cupiditate suscipit.
+                  Description: Qui non iusto dolor.
+                  ID: 3569059227681456877
                   Tags:
                   - Quo est occaecati ducimus omnis qui voluptates.
                   - Et aut.
                   - Accusantium qui.
-                  Target: 0.13596043899317112
+                  Target: 0.3494768250899328
+                - Collected: 0.08528366918654866
+                  Currency: Nam deserunt sit omnis sapiente numquam.
+                  DateModified: Architecto vel veritatis cupiditate cupiditate suscipit.
+                  Description: Qui non iusto dolor.
+                  ID: 3569059227681456877
+                  Tags:
+                  - Quo est occaecati ducimus omnis qui voluptates.
+                  - Et aut.
+                  - Accusantium qui.
+                  Target: 0.3494768250899328
               example:
-              - Collected: 0.3869581768381672
-                Currency: Ut enim nam deserunt sit omnis sapiente.
-                DateModified: Exercitationem architecto vel veritatis cupiditate cupiditate suscipit.
-                Description: Aut qui non iusto.
-                ID: 4049203230264206593
+              - Collected: 0.08528366918654866
+                Currency: Nam deserunt sit omnis sapiente numquam.
+                DateModified: Architecto vel veritatis cupiditate cupiditate suscipit.
+                Description: Qui non iusto dolor.
+                ID: 3569059227681456877
                 Tags:
                 - Quo est occaecati ducimus omnis qui voluptates.
                 - Et aut.
                 - Accusantium qui.
-                Target: 0.13596043899317112
-              - Collected: 0.3869581768381672
-                Currency: Ut enim nam deserunt sit omnis sapiente.
-                DateModified: Exercitationem architecto vel veritatis cupiditate cupiditate suscipit.
-                Description: Aut qui non iusto.
-                ID: 4049203230264206593
+                Target: 0.3494768250899328
+              - Collected: 0.08528366918654866
+                Currency: Nam deserunt sit omnis sapiente numquam.
+                DateModified: Architecto vel veritatis cupiditate cupiditate suscipit.
+                Description: Qui non iusto dolor.
+                ID: 3569059227681456877
                 Tags:
                 - Quo est occaecati ducimus omnis qui voluptates.
                 - Et aut.
                 - Accusantium qui.
-                Target: 0.13596043899317112
-              - Collected: 0.3869581768381672
-                Currency: Ut enim nam deserunt sit omnis sapiente.
-                DateModified: Exercitationem architecto vel veritatis cupiditate cupiditate suscipit.
-                Description: Aut qui non iusto.
-                ID: 4049203230264206593
-                Tags:
-                - Quo est occaecati ducimus omnis qui voluptates.
-                - Et aut.
-                - Accusantium qui.
-                Target: 0.13596043899317112
-              - Collected: 0.3869581768381672
-                Currency: Ut enim nam deserunt sit omnis sapiente.
-                DateModified: Exercitationem architecto vel veritatis cupiditate cupiditate suscipit.
-                Description: Aut qui non iusto.
-                ID: 4049203230264206593
-                Tags:
-                - Quo est occaecati ducimus omnis qui voluptates.
-                - Et aut.
-                - Accusantium qui.
-                Target: 0.13596043899317112
+                Target: 0.3494768250899328
+        "401":
+          description: ""
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InvalidScopes'
+              example: Quo veritatis est dolores accusantium sed voluptas.
+        "403":
+          description: ""
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InvalidScopes'
+              example: Pariatur eum autem qui.
 components:
   schemas:
     AddRequestBody:
@@ -120,40 +140,42 @@ components:
         collected:
           type: number
           description: Collected Quantity
-          example: 0.718368292147399
+          example: 0.7764258062996218
           format: double
         currency:
           type: string
           description: Currency
-          example: Tenetur adipisci qui veritatis doloribus.
+          example: Vero odit itaque numquam eaque dolore.
         desc:
           type: string
           description: Case Description
-          example: Quisquam enim eos eius.
+          example: Error rerum ut dignissimos sit assumenda.
         tags:
           type: array
           items:
             type: string
-            example: Maxime voluptas provident totam.
+            example: Ullam laboriosam quae rerum animi nobis non.
           description: Tags array
           example:
-          - Ut voluptatem omnis rerum nihil.
-          - Aperiam et nobis.
+          - Earum unde a.
+          - Distinctio laborum accusantium.
+          - Dolorum ratione sed et eaque debitis.
+          - Magni beatae itaque accusantium modi incidunt.
         target:
           type: number
           description: Target Quantity
-          example: 0.5749425320579751
+          example: 0.5322072757169997
           format: double
       example:
-        collected: 0.3887387499244871
-        currency: Possimus et aliquid ut hic reiciendis sit.
-        desc: Qui dolores eaque sapiente tempora consequatur quia.
+        collected: 0.03605662069340875
+        currency: Debitis dolor vel vel.
+        desc: Modi vero sit sed iste.
         tags:
-        - Unde amet sequi accusantium ex doloribus.
-        - Non in eos et labore molestiae et.
-        - Rerum ut dignissimos sit.
-        - Et illum vel vero.
-        target: 0.20434664421836665
+        - Et voluptate est accusantium ad nisi laboriosam.
+        - Eveniet voluptates.
+        - Magni consequatur corrupti.
+        - Doloremque tempore beatae.
+        target: 0.08709858501008473
       required:
       - desc
       - target
@@ -165,57 +187,70 @@ components:
         desc:
           type: string
           description: The description of the case
-          example: Itaque numquam eaque dolore.
+          example: In exercitationem cupiditate illo quae.
       example:
-        desc: Ullam laboriosam quae rerum animi nobis non.
+        desc: Quod vitae non mollitia aliquam.
+    GetRequestBody:
+      type: object
+      properties:
+        token:
+          type: string
+          description: JWT used for authentication
+          example: Aut ut.
+      example:
+        token: Consequuntur et quia reprehenderit a similique magni.
+      required:
+      - token
     GetResponse:
       type: object
       properties:
         Collected:
           type: number
           description: Collected value
-          example: 0.1830968478349031
+          example: 0.7791250716157548
           format: double
         Currency:
           type: string
           description: Currency
-          example: Consequatur porro et deserunt tenetur aut.
+          example: Iste voluptatem id ut repellat id neque.
         DateModified:
           type: string
           description: Date Modified in the database
-          example: Odio ratione.
+          example: Mollitia et rem et officia explicabo.
         Description:
           type: string
           description: Case Description
-          example: Esse debitis ut incidunt error quam provident.
+          example: Vitae nemo pariatur.
         ID:
           type: integer
           description: Case ID
-          example: 15039787010741926320
+          example: 15081498803769119381
         Tags:
           type: array
           items:
             type: string
-            example: Porro ipsa aut incidunt magnam vel.
+            example: Enim eos eius a.
           description: Tags
           example:
-          - Porro velit.
-          - Ducimus quasi non ad a.
-          - Et accusamus in optio consequatur temporibus accusamus.
+          - Tenetur adipisci qui veritatis doloribus.
+          - Maxime voluptas provident totam.
         Target:
           type: number
           description: Targetted value
-          example: 0.09451381226237493
+          example: 0.6636561037715235
           format: double
       example:
-        Collected: 0.4174072138010751
-        Currency: Quas deserunt nulla ut deleniti ea.
-        DateModified: Ut voluptas consequuntur et quia reprehenderit a.
-        Description: Et assumenda ut quo est explicabo ratione.
-        ID: 3814296965382467875
+        Collected: 0.3938071993901215
+        Currency: Omnis rerum nihil cupiditate.
+        DateModified: Consequatur quia et eaque.
+        Description: Et nobis debitis qui dolores eaque sapiente.
+        ID: 9791146395616622828
         Tags:
-        - Similique voluptatem qui fuga.
-        - Voluptatem id.
-        - Repellat id neque consequatur.
-        - Nemo pariatur dolore mollitia et rem et.
-        Target: 0.7945803488652747
+        - Et aliquid ut hic.
+        - Sit voluptatum asperiores unde amet.
+        - Accusantium ex doloribus minus.
+        Target: 0.6292243319016901
+    InvalidScopes:
+      type: string
+      description: Token scopes are invalid
+      example: Eos et labore molestiae.
